# arch3-rosetta

./: .gitignore  CMakeLists.txt  README.md  main.cxx  project.json  setup.py
bindings/: arch3_rosetta_registration.h
docs/: README.md  mkdocs.yml
docs/docs/: index.md
generator/: CMakeLists.txt  main.cxx  rosetta_binding.h
generators/: CodeWriter.h  EmbindGenerator.h  GeneratorConfig.h  MultiTargetGenerator.h  Pybind11Generator.h  PythonCMakeGenerator.h  PythonStubGenerator.h  TypeMapper.h  TypeScriptGenerator.h  WasmCMakeGenerator.h  main.cxx
python/: CMakeLists.txt  binding-simple.cxx  binding.cxx  binding.cxx.old  binding.h  registration.h  setup.py  test.py
rosetta/: binding.h
testing/: test.py
tests/: superposition.py  test_javascript.js  test_python.py  test_restapi.html  test_wasm.js
